# dotagent

./: .gitignore  Cargo.toml  Smoke-Human-2026-03-17.md  TASKBOARD.md  flake.nix  release.sh  result  status.yaml
src/: app.rs  main.rs  sync.rs  syntax.rs  theme.rs
src/scanner/: agents.rs  claude.rs  codex.rs  digtwin.rs  mod.rs  pi.rs
traverse/: app-shell.md  feature-index.md  gtk-theme-loader.md  scanner-discovery.md  sync-boundary.md  syntax-highlighter.md
