[package]
name = "dotagent"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.33"
egui = "0.33"
syntect = "5.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
walkdir = "2"
egui_ltreeview = "0.6.1"
egui-phosphor = { version = "0.11.0", features = ["regular"] }
